--- a/suppFigure2.Rmd
+++ b/suppFigure2.Rmd
@@ -4,6 +4,7 @@ output:
   pdf_document:
     fig_caption: yes
     toc: yes
+    keep_tex: yes
     includes:
       in_header: header.tex
   html_document:
@@ -38,8 +39,8 @@ pfms<-lapply(pcms,pcm2pfm)
 
 ## Supplementary Figure 2A-D. Examples of linear and radial dendrograms and code to generate them.
 
-### Plot motifs as a stack.
-```{r stackLayout, fig.width=6, fig.height=6, dpi=72, fig.cap=fn("Plotted as a stack of motifs", "A")}
+### Plot motifs as a stack with nucleotides drawn proportional to their information content (IC).
+```{r stackLayout, fig.width=6, fig.height=6, dpi=72, fig.cap=fn("Plotted as a stack of motifs with nucleotides drawn proportional to their information content (IC)", "A")}
 subset_pfms <- pfms[10:15]
 motifStack(subset_pfms, layout="stack")
 ```
@@ -56,9 +57,9 @@ motifStack(pfms[sample(1:length(pfms), 20)], layout="phylog", clabel.leaves=.8,
 
 \clearpage
 
-###Plot motifs as a linear tree depicting information content (IC).
+###Plot motifs as a linear tree with nucleotides drawn proportional to their IC.
 
-```{r treeLayout, fig.width=6, fig.height=6, dpi=72, fig.cap=fn("Plotted as a linear tree with IC", "C")}
+```{r treeLayout, fig.width=6, fig.height=6, dpi=72, fig.cap=fn("Plotted as a linear tree with nucleotides drawn proportional to their IC", "C")}
 ##By default, MotIV is used for clustering
 motifStack(subset_pfms, layout="tree", trueDist=TRUE)
 ```
@@ -122,15 +123,15 @@ for(groupDistance in c(0, 1, 2, 3)){
 }
 ```
 
-```{r fig.cap=fn("Motif signature plotted as a radial tree by different distance", "E"), fig.width=0.1, fig.height=0.02, echo=FALSE}
+```{r fig.cap=fn("Merged motif signatures plotted as radial trees with different distance cutoffs", "E"), fig.width=0.1, fig.height=0.02, echo=FALSE}
 par(mar=rep(0, 4))
 plot.new()
 ```
 
 \clearpage
 
-### Plot motif signature as a word cloud in circle.
-```{r motifCloud, warning=FALSE, fig.width=7.5, fig.height=7.5, dpi=72, fig.cap=fn("Motif signature plotted as a word cloud with motif size representing the number of motifs contributed to the signature. The larger the size, the larger the number of motifs that share the motif signature", "F")}
+### Plot motif signatures as a circular word cloud.
+```{r motifCloud, warning=FALSE, fig.width=7.5, fig.height=7.5, dpi=72, fig.cap=fn("Motif signatures plotted as a circular word cloud with motif size representing the number of motifs that contributed to the signature. The larger the motif size, the larger the number of motifs within that motif signature", "F")}
 ## get signature
 gpDist <- c(.5, 1)
 motifSig <- lapply(gpDist, motifSignature, 
@@ -143,8 +144,8 @@ motifCloud(motifSig[[1]], layout="cloud", scale=c(9, .75))
 
 \clearpage
 
-###Plot motif signature as a word cloud in rectangle.
-```{r motifCloudRect, warning=FALSE, fig.width=3.5, fig.height=3.5, fig.cap=fn("Motif signature plotted as a word cloud in rectangular by different distances", "G")}
+###Plot motif signatures as rectangular word clouds.
+```{r motifCloudRect, warning=FALSE, fig.width=3.5, fig.height=3.5, fig.cap=fn("Motif signatures plotted as rectangular word clouds using different motif distance cutoffs", "G")}
 ## motif cloud, rectangle style
 for(i in 1:2){
     motifCloud(motifSig[[i]], layout="rectangles", ic.scale=FALSE)
@@ -154,7 +155,8 @@ for(i in 1:2){
 }
 ```
 
-```{r fig.cap=fn("Motif signature plotted as a word cloud in rectangular by different distances", "G"), fig.width=0.1, fig.height=0.02, echo=FALSE}
+
+```{r fig.cap=fn("Motif signature plotted as rectangular word clouds using different distance cutoffs", "G"), fig.width=0.1, fig.height=0.02, echo=FALSE}
 par(mar=rep(0, 4))
 plot.new()
 ```
@@ -163,7 +165,7 @@ plot.new()
 
 ## Supplementary Figure 2H-M. Use various color options to highlight different motif features.
 
-motifStack offers five options to color a radial tree: the background of the inner circle, the text of motif names, the background of the motif names, the inner label ring and the outer label ring. Here are a few examples using these options to show the motif's data source, the computational algorithm that generated the motifs, the motif's information content (IC) and the TF. 
+motifStack offers multiple options to color a radial tree: the background of the inner circle, the text of motif names, the background of the motif names, inner label rings and outer label rings. Here are a few examples using these options to show the motif's data source, the computational algorithm that generated the motifs, the motif's information content (IC) and the TF name. 
 
 ```{r functions}
 getPairColor <- function(n=10L){
@@ -224,8 +226,8 @@ pcms <- safeColor(pcms)
 pfms<-lapply(pcms,pcm2pfm)
 ```
 
-###Use the color of the background of inner circle to distinguish different data sources with the parameter col.bg.
-```{r colorsets1, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the color of the background of inner circle to distinguish different data sources with the parameter col.bg", "H")}
+###Use the background color of the inner circle to distinguish different data sources with the parameter col.bg.
+```{r colorsets1, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the background color of the inner circle to distinguish different data sources with the parameter col.bg", "H")}
 motIVout <- getMotIVOut(pfms, "PCC", "SWU")
 attach(motIVout)
 plotMotifStackWithRadialPhylog(phylog=phylog, pfms=unaligned.pfms,
@@ -242,8 +244,8 @@ legend(-2.3, 2.4, legend=c("Uniprobe", "CIS-BP"),
 
 \clearpage
 
-###Use the color of text of motif names to distinguish the computational algorithms used with the parameter col.leaves.
-```{r colorsets2, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the color of the text of motif names to separate the computational algorithms used with the parameter col.leaves", "I")}
+###Use the text color of motif names to distinguish the computational algorithm with the parameter col.leaves.
+```{r colorsets2, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the text color of motif names to distinguish the computational algorithms used with the parameter col.leaves", "I")}
 plotMotifStackWithRadialPhylog(phylog=phylog, pfms=unaligned.pfms,
                             labels.leaves=leaveNames, 
                             col.leaves=algorithm,
@@ -256,8 +258,8 @@ legend(-2.3, 2.4, legend=c("DREAM5", "Seed-And-Wobble", "BEEML"),
 
 \clearpage
 
-###Use the color of the background of the motif names to distinguish motifs with high and low IC with the parameter col.leaves.bg.
-```{r colorsets3, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the color of the background of the motif names to distinguish motifs with high and low IC with the parameter col.leaves.bg", "J")}
+###Use the background color of the motif names to distinguish motifs with high and low IC with the parameter col.leaves.bg.
+```{r colorsets3, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the background color of the motif names to distinguish motifs with high and low IC with the parameter col.leaves.bg", "J")}
 icgp <- ifelse(sapply(sapply(unaligned.pfms, getIC), mean) > 0.6, 
                "lightgray", "black")
 plotMotifStackWithRadialPhylog(phylog=phylog, pfms=unaligned.pfms,
@@ -275,8 +277,8 @@ legend(-2.3, 2.4,
 
 \clearpage
 
-###Use the color of the inner ring of the motif circle to distinguish the TF with the parameter col.inner.label.circle.
-```{r colorsets4, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the color of the inner ring of the motif circle to distinguish the TFs with the parameter col.inner.label.circle", "K")}
+###Use the inner ring color to distinguish the TF name with the parameter col.inner.label.circle.
+```{r colorsets4, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the inner ring color to distinguish the TFs with the parameter col.inner.label.circle", "K")}
 plotMotifStackWithRadialPhylog(phylog=phylog, pfms=unaligned.pfms,
                             labels.leaves=leaveNames, 
                             col.inner.label.circle=motifGroup,
@@ -293,8 +295,8 @@ legend(1.5, -2, legend=levels.motifGroup[13:21],
 
 \clearpage
 
-###Use the color of the outer ring of the motif circle to distinguish the TFs with the parameter col.outer.label.circle.
-```{r colorsets5, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the color of the outer ring of the motif circle to distinguish the TFs with parameter col.outer.label.circle", "L")}
+###Use the outer ring color to distinguish the TF names with the parameter col.outer.label.circle.
+```{r colorsets5, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use the outer ring color to distinguish the TFs with parameter col.outer.label.circle", "L")}
 plotMotifStackWithRadialPhylog(phylog=phylog, pfms=unaligned.pfms,
                             labels.leaves=leaveNames, 
                             col.outer.label.circle=motifGroup,
@@ -313,7 +315,7 @@ legend(1.5, -2, legend=levels.motifGroup[13:21],
 \clearpage
 
 ###Use a combination of coloring options to visualize multiple motif features.
-```{r colorsets6, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use a combination of coloring options to visualize multiple motif feature", "M")}
+```{r colorsets6, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Use a combination of coloring options to visualize multiple motif features", "M")}
 plotMotifStackWithRadialPhylog(phylog=phylog, pfms=aligned.pfms,
                                labels.leaves=leaveNames, 
                                col.bg=algorithm, col.bg.alpha=.3,
@@ -336,12 +338,12 @@ detach(motIVout)
 
 ## Supplementary Figure 2N-O. Compare different Column Comparison Metrics (CCM) and aligment methods.
 
-Here we used a subset of mouse HD TFs with PBM data. For each TF, we generated three different motifs using three different computational methods. We compared how well different CCM and alignment methods could group together the motifs from the same TFs. This example illustrates how to set the CCM and the alignment method, using MotIV or MatAlign, and that different methods can substantially affect the resulting alignment as visulaized in motifStack.
+Here we used a subset of mouse HD TFs with PBM data. For each TF, we generated different motif alignments using different computational methods. We compared how well different CCM and alignment methods could group together the motifs from the same TFs. This example illustrates how to select the CCM and the alignment method (MotIV or MatAlign) and how different methods can affect the resulting alignment.
 
 When clustering using MovIV, Pearson Correlation Coefficient (PCC) or
 Average Log Likelihood Ratio (ALLR) was used as the CCM, and Smith-Waterman Ungapped (SWU) or Needleman-Wunsch (NW) was used as the alignment method. When clustering the motifs using MatAlign, ALLR and SWU were used as CCM and alignment respectively.
 
-To run the MatAlign examples, phylip (http://evolution.genetics.washington.edu/phylip/progs.data.dist.html) and MatAlign (http://stormo.wustl.edu/MatAlign/) need to be installed first.
+To run the MatAlign examples, phylip (http://evolution.genetics.washington.edu/phylip/progs.data.dist.html) and MatAlign (http://stormo.wustl.edu/MatAlign/) need to be installed first. Alternatively, the Docker container described in the Supplementary Notes contains all needed dependencies. 
 
 ###Visualize motif alignments generated by MotIV with different CCM and alignment methods.
 ```{r MotIV, fig.width=3.5, fig.height=3.5, fig.cap=fn("Alignment of mouse PBM data by MotIV with different CCM and alignment methods", "N")}
@@ -383,7 +385,7 @@ plot.new()
 
 \clearpage
 
-The number (1:X; 2:Y; 3:Z) on the bottom of the figure 2O and 2P represents the number of motifs from the same TF grouped by different algorithms. 3:Z means that Z number of TFs with 3 of 3 motifs clustered together; 2:Y means that Y number of TFs with 2 of 3 motifs clustered together; 1:X means that X number of TFs failed to cluster any of the 3 motifs together. Thus, the lower the X, the higher the Y and Z, the better the method performed. In this example, MatAlign performed better than MotIV even using the same CCM (ALLR) and alignment method (SWU). 
+The number (1:X; 2:Y; 3:Z) on the bottom of the Supplementary Figures 2O and 2P represents the number of motifs from the same TF grouped by different algorithms. 3:Z means that Z number of TFs with 3 of 3 motifs clustered together; 2:Y means that Y number of TFs with 2 of 3 motifs clustered together; 1:X means that X number of TFs failed to cluster any of the 3 motifs together. Thus, the lower the X and the higher the Y and Z, the better the method performed. In this example, MatAlign performed better than MotIV even using the same CCM (ALLR) and alignment method (SWU). 
 
 ###Visualize motif alignments generated by MatAlign with ALLR as the MCC and SWU as the alignment method.
 ```{r MatAlign, fig.width=12, fig.height=12, dpi=72, fig.cap=fn("Alignment of mouse PBM data by MatAlign", "O")}
@@ -542,7 +544,7 @@ motifStack(motifs, layout = "phylog")
 
 \clearpage
 
-## Supplementary Figure 2R. Plot affinity logo from a position specific affinity matrix (PSAM) as described by Foat et al. (Barrett C. Foat, Alexandre V. Morozov, Harmen J. Bussemaker; Statistical mechanical modeling of genome-wide transcription factor occupancy data by MatrixREDUCE, Bioinformatics, Volume 22, Issue 14, 15 July 2006, Pages e141-e149, https://doi.org/10.1093/bioinformatics/btl223).
+## Supplementary Figure 2R. Plot an affinity logo from a position specific affinity matrix (PSAM) as described by Foat et al. (Barrett C. Foat, Alexandre V. Morozov, Harmen J. Bussemaker; Statistical mechanical modeling of genome-wide transcription factor occupancy data by MatrixREDUCE, Bioinformatics, Volume 22, Issue 14, 15 July 2006, Pages e141-e149, https://doi.org/10.1093/bioinformatics/btl223).
 
 ```{r plotAffinityLogo, fig.width=12, fig.height=4, dpi=72, fig.cap=fn("PSAM plotted as an affinity logo.", "R"), message=FALSE, warning=FALSE, error=FALSE}
 psam <- importMatrix(file.path(path, "PSAM.mxr"), format = "psam")[[1]]
