--- a/suppFigure5.Rmd
+++ b/suppFigure5.Rmd
@@ -12,9 +12,21 @@ output:
     toc: no
 ---
 
-Motifs in the HD family are shown in purple (Human/SELEX data), brown (Mouse/PBM data), orange (mouse/SELEX) and turquoise (Fly/B1H data).
+Motif names are colored in purple (Human/SELEX data), brown (Mouse/PBM data), orange (mouse/SELEX) and turquoise (Fly/B1H data).
 
-Some of the HD TFs in the SELEX dataset have both monomeric and dimeric motifs. We have aligned the dimeric motif clusters with the associated monomeric motif clusters for the same TFs. Examples of these motif clusters include the ALX1/PHOX2 cluster (__Supplementary Figure 5A__), the BarH cluster (__Supplementary Figure 5B__), the EMX cluster (__Supplementary Figure 5C__), the En/GBX cluster (__Supplementary Figure 5D__), the IRX cluster (__Supplementary Figure 5E__), the MSX cluster (__Supplementary Figure 5F__) and the Cphx cluster (__Supplementary Figure 5G__).  Generally, members of a dimeric motif cluster have a monomeric motif that clusters with a fly HD, suggesting that the absence of a fly TF in a dimeric cluster may be a methodological difference rather than a biological one.
+__Supplementary Figure 5A__. The ALX1/PHOX2 cluster
+
+__Supplementary Figure 5B__. The BARHL cluster
+
+__Supplementary Figure 5C__. The EMX cluster
+
+__Supplementary Figure 5C__. The EN cluster
+
+__Supplementary Figure 5D__. The Irx cluster
+
+__Supplementary Figure 5E__. The MSX cluster
+
+__Supplementary Figure 5F__. The Cphx cluster
 
 ```{r setup, include=FALSE, echo=FALSE}
 library(knitr)
@@ -88,7 +100,7 @@ sta <- mapply(function(.ele, name, ID, des){
     TF.name <- strsplit(name, ".DimerCluster")[[1]]
     kexpand(.ele, id=ID, 
             cap=paste0("__Supplementary Figure 5", 
-                       LETTERS[as.numeric(TF.name[1])], "__: ", TF.name[2]),
+                       LETTERS[as.numeric(TF.name[1])], "__: ", "The ", TF.name[2], " cluster"),
             figheight=ceiling(.25*length(.ele$leaves)), des)
 }, matAlignOut, pcmpath, 1:length(pcmpath), description)
 
