--- a/suppFigure6.Rmd
+++ b/suppFigure6.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Supplementary Figure 6. Motif Clusters for HOX and Caudal Related TFs"
+title: "Supplementary Figure 6. Motif Clusters for HOX and CAD Related TFs"
 output: 
   pdf_document:
     fig_caption: yes
@@ -85,7 +85,7 @@ sta <- mapply(function(.ele, name, ID, des){
     TF.name <- gsub("Platform", "", gsub("Cluster", "", name))
     #kexpand(.ele, id=ID, cap=paste0("Supplementary Figure 6.", TF.name),
     #  figheight=ceiling(.25*length(.ele$leaves)), des)
-    kexpand(.ele, id="", cap="__Supplemental Figure 6__. Motifs of HOX and caudal related TFs are shown in purple (human), brown and orange (mouse) and turquoise (fly). These TFs cluster into two different motif groups, one with fly motifs and the other without fly motifs",
+    kexpand(.ele, id="", cap="__Supplementary Figure 6__. Motifs of HOX and CAD related TFs are shown in purple (human), brown and orange (mouse) and turquoise (fly). These TFs cluster into two different motif groups, one with fly motifs and the other without fly motifs",
         figheight=ceiling(.25*length(.ele$leaves)), "")    
 }, matAlignOut, pcmpath, 1:length(pcmpath), "")
 
